# slurm-pipeline-generator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
examples/: basic_usage.py  sample.def
src/: __init__.py
src/slurm_pipeline/: __init__.py
src/slurm_pipeline/applications/: __init__.py  coyote.py
src/slurm_pipeline/core/: __init__.py  array_job.py  base_job.py  config_parser.py  gpu_job.py  gpuarray_job.py  pipeline_driver.py  single_job.py
src/slurm_pipeline/core/components/: __init__.py  command_builder.py  file_manager.py  resource_config.py  script_generator.py
src/slurm_pipeline/workers/: __init__.py  coyote_worker.py
tests/: __init__.py  conftest.py
tests/integration/: test_integration.py
tests/unit/: test_base_jobs.py  test_composition_classes.py  test_config_parser.py  test_coyote_job.py  test_pipeline_driver.py
